# CarFlip

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY_EC2.md  Dockerfile  PROGRESO.md  README.md  TESTS_GUIDE.md  check_supabase.py  docker-compose.yml  etapa1_scraper.py  gemini.md  pyproject.toml  requirements.txt  test_yapo.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_per_source_tables.py  0002_schema_v2_tablas_por_fuente.py  0003_drop_session_cookies.py  0004_add_yapo_listings.py
api/: index.py
api/templates/: index.html
data/raw/: yapo_2026-05-18.csv  yapo_2026-05-18.jsonl
src/carflip/: __main__.py  config.py  credentials.py
src/carflip/database/: models.py  price_tracker.py  session.py  uploader.py
src/carflip/exporters/: markdown_exporter.py
src/carflip/scheduler/: runner.py
src/carflip/scrapers/: autosusados.py  base.py  chileautos.py  facebook.py  image_utils.py  logging_utils.py  mercadolibre.py  yapo.py
src/carflip/storage/: migrar_s3_a_r2.py  s3_cdn.py
src/carflip/tools/: cargar_desde_s3.py
src/carflipper/: __main__.py  config.py  credentials.py
src/carflipper/database/: price_tracker.py  session.py
src/carflipper/scheduler/: runner.py
src/carflipper/scrapers/: autosusados.py  base.py  chileautos.py  facebook.py  mercadolibre.py  yapo.py
tests/: conftest.py  test_autocosmos_cloud_ingesta.py  test_conexion_db.py  test_price_tracker.py  test_scrapers_base.py  test_yapo_cloud_ingesta.py
tests/Autocosmos/: test_autocosmos_cloud.py
tests/Yapo/: test_yapo_cloud.py
web/: .env.example  .gitignore  README.md  astro.config.mjs  components.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json
web/.astro/: data-store.json  settings.json
web/public/: robots.txt
web/src/: env.d.ts
web/src/components/: CardAviso.astro  FiltrosBarra.astro  Paginacion.astro
web/src/lib/: cdn.ts  (+5 more)
(+31 files in other folders)
