[project]
name = "carflipper"
version = "0.1.0"
description = "Scraper automático de portales de venta de autos en Chile"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "fake-useragent>=1.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "loguru>=0.7",
    "click>=8.1",
    "boto3>=1.34",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.scripts]
carflipper = "carflip.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carflip"]

[dependency-groups]
local = [
    "keyring>=25.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]
